<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_content_bottom_sheet_gradient"
    android:clickable="false"
    android:elevation="@dimen/design_appbar_elevation"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_close_bottom_sheet"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_button_close_bottom_sheet"
            android:contentDescription="@null"
            android:src="@drawable/ic_close"
            android:tint="@color/pearl_dark_grey" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_content_detail_wisata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_foto"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@android:color/transparent"
            app:cardWidth="200dp"
            tools:listitem="@layout/item_foto_wisata" />

        <LinearLayout
            android:id="@+id/layout_detail_wisata"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_content_bottom_sheet_text_description"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_bottom_sheet_name_wisata"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_weight="6"
                    android:textAllCaps="true"
                    android:textColor="@color/pearl_dark_grey"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Pantai Klayar" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_favorite"
                    android:tint="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_place" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/text_item_wisata_address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/darker_gray" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_bottom_sheet_deskripsi_wisata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/pearl_dark_grey"
                android:textStyle="normal"
                tools:text="Pantai yang terletak di Desa Sendang, Kecamatan Donorojo dan belum disentuh oleh banyak modernisasi, memiliki daya" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_content_about_me"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_foto_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@null"
                android:src="@drawable/me"
                app:civ_border_color="@color/pearl_dark_grey"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/text_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_content_about_me_bio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_content_bottom_sheet_text_description"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:src="@drawable/icons8_gmail" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:contentDescription="@null"
                        android:src="@drawable/icons8_phone" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:contentDescription="@null"
                        android:src="@drawable/icons8_github" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_my_email"
                        android:textColor="@color/pearl_dark_grey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/text_my_phone"
                        android:textColor="@color/pearl_dark_grey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:text="@string/text_my_github_account"
                        android:textColor="@color/pearl_dark_grey" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>